--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
 $appColor: white;
 $containerColor: rgb(100, 114, 124);
 $bodyColor: white;
-$appHeaderColor :  black;
+$appHeaderColor :  rgb(100, 114, 124);
 $componentColor: white;
 $tableColor: #ddd;
 $tableHover: #ddd;
