--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -96,6 +96,9 @@
     margin-right: 0;
     margin-left: 0;
   }
+  a, a:visited, a:hover, a:active {
+    color: white;
+  }
   table tr td {
     padding: 0;
     height: 40px;
@@ -166,7 +169,7 @@
   }
   a:link {
     text-decoration: none;
-    color: black;
+    color: inherit;
   }
   a:hover {
     -webkit-transform: scale(1.08);
@@ -374,7 +377,7 @@
   }
   a:link {
     text-decoration: none;
-    color: black;
+    color: white;
   }
   a:hover {
     -webkit-transform: scale(1.08);
